Fix too-close line wrapping in h1 elements

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5rem;
 }
 
 img.center {
@@ -25,7 +25,8 @@ h1 {
   margin-top: 4px;
   padding-bottom: 16px;
   border-bottom: 1px solid #e1e4e8;
-  margin-bottom: 20px
+  margin-bottom: 20px;
+  line-height: 2.0rem;
 }
 
 .content {
